Phase 1: Implement global input tracking
- Added uiohook-napi for keyboard and mouse tracking
- Created InputTracker module with event counting
- Set up IPC communication between main and renderer processes
- Added live stats overlay showing keypresses and clicks
- Implemented platform-specific fallback handling
- Added INPUT_TRACKING_README.md with setup instructions
- Meowchi reacts with happy face every 50 actions

--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
   "type": "commonjs",
   "devDependencies": {
     "electron": "^37.2.4"
+  },
+  "dependencies": {
+    "uiohook-napi": "^1.5.4"
   }
 }
