Fix icon build issue by converting SVG to PNG
- Add icon conversion script to generate PNG icons
- Update electron-builder config to use PNG instead of SVG
- Add canvas devDependency for icon conversion
- Generate multiple icon sizes for cross-platform compatibility

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "license": "MIT",
   "type": "commonjs",
   "devDependencies": {
+    "canvas": "^3.1.2",
     "electron": "^37.2.4",
     "electron-builder": "^26.0.12"
   },
@@ -44,7 +45,7 @@
     ],
     "mac": {
       "category": "public.app-category.entertainment",
-      "icon": "assets/icon.svg",
+      "icon": "build/icon.png",
       "hardenedRuntime": true,
       "gatekeeperAssess": false,
       "entitlements": "build/entitlements.mac.plist",
@@ -52,11 +53,11 @@
     },
     "win": {
       "target": "nsis",
-      "icon": "assets/icon.svg"
+      "icon": "build/icon.png"
     },
     "linux": {
       "target": "AppImage",
-      "icon": "assets/icon.svg",
+      "icon": "build/icons",
       "category": "Game"
     },
     "nsis": {
