Add platform-specific installation guides and minor improvements
- Add Windows installation guide for SmartScreen warnings
- Add Linux installation guide for permissions setup
- Update version display to 0.1.1 in UI
- Add electron-rebuild script for native dependencies
- Link all installation guides from README

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "electron-builder",
     "dist": "electron-builder --publish=never",
     "postinstall": "electron-builder install-app-deps",
+    "rebuild": "electron-rebuild -f -w uiohook-napi",
     "dist:win": "electron-builder --win",
     "dist:mac": "electron-builder --mac",
     "dist:linux": "electron-builder --linux"
