--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,8 @@ build/*
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Local specification files
+Meowchi_Build_Specification.md
+*_Build_Specification.md
+*_Specification.md
